@@ -662,14 +662,21 @@ def masking(self_cmd, sele):
 def compute(self_cmd, sele):
     return [[ 2, 'Compute:', '' ],     
             [ 1, 'atom count'   ,'cmd.count_atoms("'+sele+'",quiet=0)'          ],
-            [ 0, ''               ,''                             ],           
-            [ 1, 'formal charge sum'   ,'util.sum_formal_charges("'+sele+'",quiet=0,_self=cmd)'          ],
-            [ 1, 'partial charges sum'   ,'util.sum_partial_charges("'+sele+'",quiet=0,_self=cmd)'          ],
-             [ 1, 'surface area',
-               [[ 2, 'Surface Area Type:', ''],
-                [ 1, 'molecular', 'cmd.get_area("'+sele+'",quiet=0,_self=cmd)' ],
-                [ 1, 'solvent accessible', 'util.get_sasa(sele="'+sele+'",_self=cmd)' ],
-                ]],
+            [ 1, 'charges',
+              [[ 2, 'Charge:', ''],
+               [ 1, 'formal charge sum'   ,'util.sum_formal_charges("'+sele+'",quiet=0,_self=cmd)'    ],
+               [ 1, 'partial charges sum'   ,'util.sum_partial_charges("'+sele+'",quiet=0,_self=cmd)' ],
+               ]],
+            [ 1, 'surface area',
+              [[ 2, 'Surface Area Type:', ''],
+               [ 1, 'molecular', 'cmd.get_area("'+sele+'",quiet=0,_self=cmd)' ],
+               [ 1, 'solvent accessible', 'util.get_sasa(sele="'+sele+'",_self=cmd)' ],
+               ]],
+            [ 1, 'molecular weight',
+              [[ 2, 'Molecular Weight:', ''],
+               [ 1, 'explicit', 'util.compute_mass("'+sele+'",implicit=False,quiet=0,_self=cmd)' ],
+               [ 1, 'with missing hydrogens', 'util.compute_mass("'+sele+'",implicit=True,quiet=0,_self=cmd)' ],
+             ]],
             ]
 
 def vacuum(self_cmd, sele):
