@@ -2,10 +2,18 @@
 CHANGE LOG
 =========================================================================
 
+2011-08-21 Jason Vertrees <Jason.Vertrees@schrodinger.com>
+
+        * Fixed click-flash that happens when middle-clicking when
+          showing the background gradient (thanks, Blaine)
+
+        * Added A > Compute > Molecular Weight and cleaned up the
+          compute menu in general
+
 2011-08-15 Jason Vertrees <Jason.Vertrees@schrodinger.com>
 
 	* Fixed a conversion bug in util.cbc; thanks Hongbo.
-	
+
 2011-07-26 Jason Vertrees <Jason.Vertrees@schrodinger.com>
 
 	* one more fread
